# autocalib

./: .gitignore  AGENTS.md  Dockerfile  README.md  absmap_architecture.md  autoabsmap_architecture.md  dev_plan.md  docker-compose.yml  plan_architecture.md  requirements.txt  run.sh
absolutemap-gen/: .env.example  .gitignore  README.md  absolutemap_product_engineering_note.md  pyproject.toml  requirements.txt
absolutemap-gen/docs/: Maquette Sagaf - incl Autocalib.txt  absmap_generation_tool_engineering.md  absolutemap_generation_cockpit.md  implementation_slot_extraction.md  plan_extraction_centres_places.md
absolutemap-gen/external-code/: data.yaml  geometric_engine.py  parking_spot_obb_training.ipynb
absolutemap-gen/notebooks/: train_yolo_obb_parking.ipynb
absolutemap-gen/scripts/: README.md  fetch_ign_ortho_geotiff.py  fetch_mapbox_static_geotiff.py  finetune_segformer_parking.py  ign_centers_dataset.py  label_parkable_zones.py  label_parkable_zones_web.py  mapbox_centers_dataset.py  mapbox_centers_dataset_standalone.py  run_pipeline.py  test_detection.py  test_segmentation.py  train_yolo_obb_parking.py  visualize_ground_truth.py
absolutemap-gen/segformer/: finetune_segformer.py  finetune_segformer_colab.ipynb  inference_local.py  make_comparison_grid.py  segformer_cityscapes_inference.py
absolutemap-gen/tests/: test_artifacts_io.py  test_detection_mask_filter.py  test_io_geotiff.py  test_segmentation_postprocess.py
absolutemap-gen/webapp/: app.py
autoabsmap/: __init__.py  plan_architecture.md  pyproject.toml
autoabsmap/alignment_tool/: __init__.py  models.py  straightener.py
autoabsmap/config/: __init__.py  settings.py
autoabsmap/export/: __init__.py  geojson.py  models.py
autoabsmap/generator_engine/: __init__.py  geometric_engine.py  learning_artifacts.py  mask_vectorize.py  models.py  postprocess.py  runner.py  stage_artifacts.py  stages.py
autoabsmap/geometry/: __init__.py  (+1 more)
calib-gen/: README.md  calib_generator.md  plan_architecture.md  pyproject.toml
(+495 files in other folders)
