[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoabsmap"
version = "0.1.0"
description = "Clean parking slot extraction package"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "geojson-pydantic>=1.0",
    "numpy>=1.24",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "shapely>=2.0",
    "Pillow>=10.0",
    "opencv-python-headless>=4.5",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
    "ultralytics>=8.0",
]

[tool.setuptools.packages.find]
include = ["autoabsmap*"]
